--- a/doc/addons/evm/actions/page.mdx
+++ b/doc/addons/evm/actions/page.mdx
@@ -173,12 +173,12 @@ The `evm::call_contract` action encodes a contract call transaction, signs it wi
 
 
   <Property name="max_fee_per_gas" type="optional">
-    Sets the max fee per gas of an EIP1559 transaction.
+    Sets the max fee per gas of an EIP1559 transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="max_priority_fee_per_gas" type="optional">
-    Sets the max priority fee per gas of an EIP1559 transaction.
+    Sets the max priority fee per gas of an EIP1559 transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
@@ -193,12 +193,12 @@ The `evm::call_contract` action encodes a contract call transaction, signs it wi
 
 
   <Property name="gas_limit" type="optional">
-    Sets the maximum amount of gas that should be used to execute this transaction.
+    Sets the maximum amount of gas that should be used to execute this transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="gas_price" type="optional">
-    Sets the gas price for Legacy transactions.
+    Sets the gas price for Legacy transactions. This value will be retrieved from the network if omitted.
   </Property>
 
 
@@ -227,10 +227,10 @@ When the `call_contract` action is successfully executed, the following outputs 
 
 ```hcl {{ title: 'main.tx' }}
 action "call_some_contract" "evm::call_contract" {
-    contract_address = evm::address(env.MY_CONTRACT_ADDRESS)
+    contract_address = input.contract_address
     function_name = "myFunction"
     function_args = [evm::bytes("0x1234")]
-    from = evm::address(env.MY_ADDRESS)
+    signer = signer.operator
 }
 
 ```
@@ -299,17 +299,17 @@ The `evm::eth_call` command simulates an Ethereum transaction using the `eth_cal
 
 
   <Property name="type" type="optional">
-    The transaction type. Options are 'Legacy', 'EIP2930', 'EIP1559', 'EIP4844'. The default is 'EIP1559'.
+    The transaction type. Options are 'Legacy', 'EIP2930', 'EIP1559', 'EIP4844'. The default is 'EIP1559'. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="max_fee_per_gas" type="optional">
-    Sets the max fee per gas of an EIP1559 transaction.
+    Sets the max fee per gas of an EIP1559 transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="max_priority_fee_per_gas" type="optional">
-    Sets the max priority fee per gas of an EIP1559 transaction.
+    Sets the max priority fee per gas of an EIP1559 transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
@@ -324,12 +324,12 @@ The `evm::eth_call` command simulates an Ethereum transaction using the `eth_cal
 
 
   <Property name="gas_limit" type="optional">
-    Sets the maximum amount of gas that should be used to execute this transaction.
+    Sets the maximum amount of gas that should be used to execute this transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="gas_price" type="optional">
-    Sets the gas price for Legacy transactions.
+    Sets the gas price for Legacy transactions. This value will be retrieved from the network if omitted.
   </Property>
 
 
@@ -358,10 +358,10 @@ When the `eth_call` action is successfully executed, the following outputs are a
 
 ```hcl {{ title: 'main.tx' }}
 action "call_some_contract" "evm::eth_call" {
-    contract_address = evm::address(env.MY_CONTRACT_ADDRESS)
+    contract_address = input.contract_address
     function_name = "myFunction"
     function_args = [evm::bytes("0x1234")]
-    from = evm::address(env.MY_ADDRESS)
+    signer = signer.operator.address
 }
 
 ```
@@ -410,17 +410,17 @@ The `evm::deploy_contract` action encodes a contract deployment transaction, sig
 
 
   <Property name="type" type="optional">
-    The transaction type. Options are 'Legacy', 'EIP2930', 'EIP1559', 'EIP4844'. The default is 'EIP1559'.
+    The transaction type. Options are 'Legacy', 'EIP2930', 'EIP1559', 'EIP4844'. The default is 'EIP1559'. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="max_fee_per_gas" type="optional">
-    Sets the max fee per gas of an EIP1559 transaction.
+    Sets the max fee per gas of an EIP1559 transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="max_priority_fee_per_gas" type="optional">
-    Sets the max priority fee per gas of an EIP1559 transaction.
+    Sets the max priority fee per gas of an EIP1559 transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
@@ -435,37 +435,40 @@ The `evm::deploy_contract` action encodes a contract deployment transaction, sig
 
 
   <Property name="gas_limit" type="optional">
-    Sets the maximum amount of gas that should be used to execute this transaction.
+    Sets the maximum amount of gas that should be used to execute this transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="gas_price" type="optional">
-    Sets the gas price for Legacy transactions.
+    Sets the gas price for Legacy transactions. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="contract" type="required">
-    Coming soon
+    The contract to deploy. At a minimum, this should be an object with a key `bytecode` and the contract bytecode.
+The abi field can also be provided to add type checking for the constructor arguments.
+The `evm::get_contract_from_foundry_project` and `evm::get_contract_from_hardhat_project` functions can be used to retrieve the contract object.
+
   </Property>
 
 
   <Property name="constructor_args" type="optional">
-    Coming soon
+    The optional constructor arguments for the deployed contract.
   </Property>
 
 
   <Property name="confirmations" type="optional">
-    Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues.
+    Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues. The default is 1.
   </Property>
 
 
   <Property name="verify" type="optional">
-    
+    Coming soon.
   </Property>
 
 
   <Property name="block_explorer_api_key" type="optional">
-    The URL of the block explorer used to verify the contract.
+    Coming soon.
   </Property>
 
 
@@ -493,7 +496,10 @@ When the `deploy_contract` action is successfully executed, the following output
 
 
 ```hcl {{ title: 'main.tx' }}
-// Coming soon
+action "my_contract" "evm::deploy_contract" {
+    contract = evm::get_contract_from_foundry_project("MyContract")
+    signer = signer.deployer
+}
 
 ```
 
@@ -513,7 +519,7 @@ When the `deploy_contract` action is successfully executed, the following output
 
 ## verify_contract {{ tag: 'action' }}
 
-The `evm::verify_contract` action sends the required contract deployment artifacts to a block explorer to verify the contract with the explorer.
+The `evm::verify_contract` is coming soon. This action sends the required contract deployment artifacts to a block explorer to verify the contract with the explorer.
 
 ### Inputs
 
@@ -613,12 +619,12 @@ The `evm::check_confirmations` action polls the network until the provided `tx_h
 
 
   <Property name="chain_id" type="required">
-    Coming soon
+    The chain ID of the network to check the transaction on.
   </Property>
 
 
   <Property name="confirmations" type="optional">
-    Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues.
+    Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues. The default is 1.
   </Property>
 
 
@@ -648,7 +654,6 @@ When the `check_confirmations` action is successfully executed, the following ou
 ```hcl {{ title: 'main.tx' }}
 action "confirm_deployment" "evm::check_confirmations" {
     tx_hash = action.some_deploying_action.tx_hash
-    confirmations = 1
 }
 
 ```
@@ -669,7 +674,7 @@ action "confirm_deployment" "evm::check_confirmations" {
 
 ## sign_transaction {{ tag: 'action' }}
 
-Coming soon
+The `evm::sign_transaction` command signs an EVM transaction.
 
 ### Inputs
 
@@ -683,6 +688,11 @@ Coming soon
 
   <Property name="transaction_payload_bytes" type="required">
     The unsigned transaction payload bytes.
+  </Property>
+
+
+  <Property name="signer" type="required">
+    A reference to a signer construct, which will be used to sign the transaction payload.
   </Property>
 
 
@@ -710,7 +720,11 @@ When the `sign_transaction` action is successfully executed, the following outpu
 
 
 ```hcl {{ title: 'main.tx' }}
-// Coming soon
+action "signed_tx" "evm::sign_transaction" {
+    description = "Deploy a new contract"
+    transaction_payload_bytes = "0x1234567890abcdef"
+    signer = signer.operator
+}
 
 ```
 
@@ -730,7 +744,11 @@ When the `sign_transaction` action is successfully executed, the following outpu
 
 ## deploy_contract_create2 {{ tag: 'action' }}
 
-Coming soon
+The `evm::deploy_contract_create2` action deploys an EVM contract using a Create2 proxy contract. 
+The Create2 proxy contract is used to deploy the contract at a deterministic address based on the contract's bytecode and the salt value. 
+If the contract has already been deployed, the action will not deploy it again. 
+By default, Foundry's factory contract (`0x4e59b44847b379578588920cA78FbF26c0B4956C`) is used.
+
 
 ### Inputs
 
@@ -753,22 +771,22 @@ Coming soon
 
 
   <Property name="create2_factory_address" type="optional">
-    Coming soon
+    To deploy the contract with an alternative factory, provide the address of the factory contract.
   </Property>
 
 
   <Property name="create2_factory_abi" type="optional">
-    Coming soon
+    The ABI of the alternative create2 factory contract, optionally used to check input arguments before sending the transaction to the chain.
   </Property>
 
 
   <Property name="create2_factory_function_name" type="optional">
-    Coming soon
+    If an alternative create2 factory is used, the name of the function to call.
   </Property>
 
 
   <Property name="create2_factory_function_args" type="optional">
-    Coming soon
+    If an alternative create2 factory is used, the arguments to pass to the function.
   </Property>
 
 
@@ -783,12 +801,12 @@ Coming soon
 
 
   <Property name="max_fee_per_gas" type="optional">
-    Sets the max fee per gas of an EIP1559 transaction.
+    Sets the max fee per gas of an EIP1559 transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="max_priority_fee_per_gas" type="optional">
-    Sets the max priority fee per gas of an EIP1559 transaction.
+    Sets the max priority fee per gas of an EIP1559 transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
@@ -803,47 +821,50 @@ Coming soon
 
 
   <Property name="gas_limit" type="optional">
-    Sets the maximum amount of gas that should be used to execute this transaction.
+    Sets the maximum amount of gas that should be used to execute this transaction. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="gas_price" type="optional">
-    Sets the gas price for Legacy transactions.
+    Sets the gas price for Legacy transactions. This value will be retrieved from the network if omitted.
   </Property>
 
 
   <Property name="contract" type="required">
-    Coming soon
+    The contract to deploy. At a minimum, this should be an object with a key `bytecode` and the contract bytecode.
+The abi field can also be provided to add type checking for the constructor arguments.
+The `evm::get_contract_from_foundry_project` and `evm::get_contract_from_hardhat_project` functions can be used to retrieve the contract object.
+
   </Property>
 
 
   <Property name="constructor_args" type="optional">
-    Coming soon
+    The optional constructor arguments for the deployed contract.
   </Property>
 
 
   <Property name="expected_contract_address" type="optional">
-    Coming soon
+    The contract address that the deployment should yield. If the deployment does not yield this address, the action will fail. If this field is omitted, the any deployed address will be accepted.
   </Property>
 
 
   <Property name="salt" type="optional">
-    Coming soon
+    The salt value used to calculate the contract address. This value must be a 32-byte hex string.
   </Property>
 
 
   <Property name="confirmations" type="optional">
-    Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues.
+    Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues. The default is 1.
   </Property>
 
 
   <Property name="verify" type="optional">
-    
+    Coming soon.
   </Property>
 
 
   <Property name="block_explorer_api_key" type="optional">
-    The URL of the block explorer used to verify the contract.
+    Coming soon.
   </Property>
 
 
@@ -876,7 +897,11 @@ When the `deploy_contract_create2` action is successfully executed, the followin
 
 
 ```hcl {{ title: 'main.tx' }}
-// Coming soon
+action "my_contract" "evm::deploy_contract_create2" {
+    contract = evm::get_contract_from_foundry_project("MyContract")
+    salt = "0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef"
+    signer = signer.deployer
+}
 
 ```
 
