--- a/doc/addons/stacks/actions/page.mdx
+++ b/doc/addons/stacks/actions/page.mdx
@@ -26,7 +26,7 @@ The `stacks::sign_transaction` action signs an encoded transaction payload with 
   </Property>
 
 
-  <Property name="network_id" type="required">
+  <Property name="network_id" type="optional">
     The network id, which is used to set the transaction version. Valid values are `"mainnet"`, `"testnet"` or `"devnet"`.
   </Property>
 
@@ -126,7 +126,7 @@ The `deploy_contract` action encodes a contract deployment transaction, signs th
   </Property>
 
 
-  <Property name="network_id" type="required">
+  <Property name="network_id" type="optional">
     The network id. Valid values are `"mainnet"`, `"testnet"` or `"devnet"`.
   </Property>
 
@@ -281,7 +281,7 @@ The `stacks::deploy_requirement` action retrieves a deployed contract along with
   </Property>
 
 
-  <Property name="network_id" type="required">
+  <Property name="network_id" type="optional">
     The network id. Valid values are `"mainnet"`, `"testnet"` or `"devnet"`.
   </Property>
 
@@ -421,7 +421,7 @@ The `stacks::call_contract` action encodes a valid contract call payload and ser
   </Property>
 
 
-  <Property name="network_id" type="required">
+  <Property name="network_id" type="optional">
     The network id. Valid values are `"mainnet"`, `"testnet"` or `"devnet"`.
   </Property>
 
@@ -507,7 +507,7 @@ The `stacks::broadcast_transaction` action sends a signed transaction payload to
   </Property>
 
 
-  <Property name="network_id" type="required">
+  <Property name="network_id" type="optional">
     The network id. Valid values are `"mainnet"`, `"testnet"` or `"devnet"`.
   </Property>
 
@@ -619,7 +619,7 @@ The `stacks::call_readonly_fn` action queries a public readonly function.
   </Property>
 
 
-  <Property name="network_id" type="required">
+  <Property name="network_id" type="optional">
     The network id. Valid values are `"mainnet"`, `"testnet"` or `"devnet"`.
   </Property>
 
@@ -728,7 +728,7 @@ The `stacks::call_contract` action encodes a contract call transaction, signs th
   </Property>
 
 
-  <Property name="network_id" type="required">
+  <Property name="network_id" type="optional">
     The network id. Valid values are `"mainnet"`, `"testnet"` or `"devnet"`.
   </Property>
 
@@ -875,7 +875,7 @@ The `stacks::send_stx` action encodes a STX transfer transaction, signs the tran
   </Property>
 
 
-  <Property name="network_id" type="required">
+  <Property name="network_id" type="optional">
     The network id. Valid values are `"mainnet"`, `"testnet"` or `"devnet"`.
   </Property>
 
